fixed nav z-index for mobile

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -1,6 +1,5 @@
 .home {
     .wrapper {
-        z-index: 3;
         height: 95vh;
         display: flex;
         flex-direction: column;
